--- a/src/components/ToDoList/ToDoList.css
+++ b/src/components/ToDoList/ToDoList.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 .todolist {
   width: 500px;
